khadi's-web-site

--- a/index.html
+++ b/index.html
@@ -4,11 +4,88 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <!-- facicon -- -->
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#910dd3">
+    <meta name="msapplication-TileColor" content="#2d89ef">
+    <meta name="theme-color" content="#ffffff">
+    <!-- fontawesome -->
+    <link href="https://use.fontawesome.com/releases/v5.0.1/css/all.css" rel="stylesheet">
+
     <link rel="stylesheet" href="./css/index.css" />
   </head>
   <body>
-    <!-- HEADER  -->
-    <!-- MAIN -->
-    <!-- FOOTER -->
+    <header>
+      <div class="conatiner">
+        <div class="header-main">
+          <img class="hero-img" src="./images/uer-1.png" alt="" width="150px" height="150px" />
+          <hr class="hr">
+          <div class="menu-1">
+            <h1>Tolibxonov M</h1>
+            <a class="telegram" href="#">telegram</a>
+            <a  class="github" href="#">github</a>
+          </div>
+          <hr class="hr">
+          <div class="menu-2">
+            <h2>fergana</h2>
+            <p class="
+            date">date birth</p>
+            <a class="tel" href="tel:+998123456789">tel number</a>
+        </div>
+      </div>
+    </header>
+    <main>
+      <section class="sec-hero">
+        <div class="hero-main container">
+          <div class="hero-left">
+            <div class="left-box">
+              <a href="#"><img src="./images/github-icon-2048x2048-qlv5m092.png" alt="" width="30px" height="30px"></a>
+              <p>work-name!</p>
+              <a href="#"><img src="./images/Triangle_black_white.svg.png" alt="" width="30" height="30px"></a> 
+            </div>
+            <div class="left-box">
+              <a href="#"><img src="./images/github-icon-2048x2048-qlv5m092.png" alt="" width="30px" height="30px"></a>
+              <p>work-name!</p>
+              <a href="#"><img src="./images/Triangle_black_white.svg.png" alt="" width="30" height="30px"></a> 
+            </div>
+            <div class="left-box">
+              <a href="#"><img src="./images/github-icon-2048x2048-qlv5m092.png" alt="" width="30px" height="30px"></a>
+              <p>work-name!</p>
+              <a href="#"><img src="./images/Triangle_black_white.svg.png" alt="" width="30" height="30px"></a> 
+            </div>
+            <div class="left-box">
+              <a href="#"><img src="./images/github-icon-2048x2048-qlv5m092.png" alt="" width="30px" height="30px"></a>
+              <p>work-name!</p>
+              <a href="#"><img src="./images/Triangle_black_white.svg.png" alt="" width="30" height="30px"></a> 
+            </div>
+         </div>
+          <div class="hero-right">  
+            <div class="right-box">
+              <a href="#"><img src="./images/github-icon-2048x2048-qlv5m092.png" alt="" width="30px" height="30px"></a>
+              <p>work-name!</p>
+              <a href="#"><img src="./images/Triangle_black_white.svg.png" alt="" width="30" height="30px"></a> 
+            </div>
+            <div class="right-box">
+              <a href="#"><img src="./images/github-icon-2048x2048-qlv5m092.png" alt="" width="30px" height="30px"></a>
+              <p>work-name!</p>
+              <a href="#"><img src="./images/Triangle_black_white.svg.png" alt="" width="30" height="30px"></a> 
+            </div>
+            <div class="right-box">
+              <a href="#"><img src="./images/github-icon-2048x2048-qlv5m092.png" alt="" width="30px" height="30px"></a>
+              <p>work-name!</p>
+              <a href="#"><img src="./images/Triangle_black_white.svg.png" alt="" width="30" height="30px"></a> 
+            </div>
+            <div class="right-box">
+              <a href="#"><img src="./images/github-icon-2048x2048-qlv5m092.png" alt="" width="30px" height="30px"></a>
+              <p>work-name!</p>
+              <a href="#"><img src="./images/Triangle_black_white.svg.png" alt="" width="30" height="30px"></a> 
+            </div>
+          </div>
+      </div>
+      </section>
+    </main>
   </body>
 </html>
