add-responsive-features

--- a/index.html
+++ b/index.html
@@ -23,18 +23,20 @@
         <div class="header-main">
           <img class="hero-img" src="./images/uer-1.png" alt="" width="150px" height="150px" />
           <hr class="hr">
+         <div class="menu-all">
           <div class="menu-1">
             <h1>Tolibxonov M</h1>
             <a class="telegram" href="#">telegram</a>
             <a  class="github" href="#">github</a>
           </div>
-          <hr class="hr">
+          <hr class="hr-2">
           <div class="menu-2">
             <h2>fergana</h2>
             <p class="
             date">date birth</p>
             <a class="tel" href="tel:+998123456789">tel number</a>
         </div>
+         </div>
       </div>
     </header>
     <main>
